...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYH-My-0ao">
                                        <rect key="frame" x="8" y="60" width="349" height="24"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkl-mY-Ip7">
                                        <rect key="frame" x="8" y="169" width="349" height="24"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="SIGNUP"/>
                                        <connections>
                                            <action selector="signupButton:" destination="4Ea-Re-IeC" eventType="touchUpInside" id="uwj-PG-CpK"/>
...
                                        <rect key="frame" x="16" y="20" width="382" height="856"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ubf-9I-ImM">
                                                <rect key="frame" x="0.0" y="0.0" width="382" height="47.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repeat password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ICO-Jk-G7w">
                                                <rect key="frame" x="0.0" y="231" width="382" height="47.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6wz-G3-aE1">
                                                <rect key="frame" x="0.0" y="462" width="382" height="47.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Credit card" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4J-Qk-jRG">
                                                <rect key="frame" x="0.0" y="577.5" width="382" height="47.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some information about you" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jnZ-Ni-UmS">
                                                <rect key="frame" x="0.0" y="693" width="382" height="47.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <rect key="frame" x="0.0" y="726" width="382" height="42"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <state key="normal" title="REGISTER"/>
                                                <connections>
                                                    <action selector="registerPressed:" destination="GH1-jz-aYC" eventType="touchUpInside" id="Kbb-qv-iQd"/>
...
